# companyScraper

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  angular.json  package-lock.json  package.json  pyproject.toml  server.js  tox.ini
backend/: main.py  pyproject.toml
backend/app/: __init__.py  routes.py
cams/: main.py
cams/app/: __init__.py  flask_app.py  models.py  routes.py
cams/app/scraping/: scrapeerr.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/api/scraper/: dataScraper.ts
frontend/src/app/: app.component.html  app.component.ts  app.routes.ts
frontend/src/components/article-list/: article-list.component.css  article-list.component.html  article-list.component.ts
frontend/src/components/home/: home.component.css  home.component.html  home.component.ts
frontend/src/environments/: environment.prod.ts
tests/: test_main.py
